updating to use war plugin

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -18,3 +18,16 @@ akka {
 spray.can.server {
   request-timeout = 30s
 }
+spray.servlet {
+  boot-class = "com.example.base.Boot"
+  request-timeout = 30 s
+  timeout-timeout = 500 ms
+  timeout-handler = ""
+  root-path = AUTO
+  remote-address-header = off
+  verbose-error-messages = off
+  max-content-length = 5 m
+  servlet-request-access = off
+  illegal-header-warnings = on
+  uri-parsing-mode = relaxed
+}
